# defmarshal-workspace

./: .gitignore  .tomtom_key  AGENTS.md  ANIME_COMPANION_README.md  AUTONOMOUS_SYSTEM.md  CRON_JOBS.md  DASHBOARD_README.md  FEBRUARY-16-2026-SUMMARY.md  FRESH_INSTALL_TASKS.md  GEMINI_RESEARCH.md  HANDOFF_QWEN.md  HEARTBEAT.md  IDENTITY.md  IMPLEMENTATION_PLAN.md  MEMORY.md  MEMORY_HISTORY.md  OBSIDIAN_CLI_EXPLORATION.md  OPENCLAW_CRON_GUIDE.md  SOUL.md  TOOLS.md  TRAFFIC_PROJECT.md  USER.md  VALHALLA_MIGRATION.md  VALHALLA_SETUP_COMPLETE.md  WEBDAV_SETUP.md  WEB_DASHBOARD_README.md  active-tasks.md  anime-companion  aria2.conf  autonomous-checkpoints.json  chaotic-experiments.md  cleanup-agent-artifacts.sh  content-agent-loop.sh  dashboard.py  dashboard.sh  data.json  dev-agent-loop.sh  dev-agent-summary-2026-02-19.md  dev-cycle-summary-2026-02-15-1128.md  dev-cycle-summary-2026-02-15.md  (+69 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
agents/: README.md  SUMMARY.md  agent-manager.sh  agni-cycle.sh  (+41 more)
projects/heal-distillation/: README.md  pyproject.toml  run.py  test_toy.py  test_trajectory.py
projects/heal-distillation/data/: toy_base.jsonl  traj_test.jsonl  trajectories.jsonl
projects/heal-distillation/experiments/: pipeline_state.json
projects/heal-distillation/src/heal/: __init__.py  data.py  evaluate.py  gear.py  pace.py  pure.py  teacher.py  train.py
projects/heal-distillation/src/heal/scripts/: __init__.py  filter.py  generate.py
projects/heal-distillation/src/heal_distill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+1205 files in other folders)
